--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
     ports:
       - "9090:8080"
     command: "start-dev"
+    deploy:
+      resources:
+        limits:
+          memory: 1G # Asignamos un poco más a Keycloak ya que puede consumir más memoria
 
   config-service:
     build: ./services/config-service
@@ -22,6 +26,10 @@ services:
       timeout: 5s
       retries: 5
       start_period: 20s
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   api-gateway-service:
     build: ./services/api-gateway-service
@@ -31,6 +39,10 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   identity-service:
     build: ./services/identity-service
@@ -38,6 +50,10 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   catalog-service:
     build: ./services/catalog-service
@@ -45,6 +61,10 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   order-service:
     build: ./services/order-service
@@ -52,6 +72,10 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   inventory-service:
     build: ./services/inventory-service
@@ -59,6 +83,10 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
 
   payment-service:
     build: ./services/payment-service
@@ -66,3 +94,7 @@ services:
     depends_on:
       config-service:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          memory: 512M
