feat(se murio, vamos un paso atras): necesitamos hacerlo mas granular solo levantar un ms y una img
No podemos hacer el trouble shoting completo ya que no sabemos si flla la imagen de docker la red el
servicio el api construimos en alto nivel necesitamos que sea mas granuklar

--- a/services/api-gateway-service/src/main/resources/application.yml
+++ b/services/api-gateway-service/src/main/resources/application.yml
@@ -6,3 +6,15 @@ spring:
     name: api-gateway-service
   config:
     import: "configserver:http://config-service:8888"
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: catalog-service-route
+          uri: lb://catalog-service:8080
+          predicates:
+            - Path=/catalog-service/**
+          filters:
+            - StripPrefix=1
