--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: '3.8'
 
 services:
-  keycloak:
-    image: quay.io/keycloak/keycloak:24.0.4
-    container_name: keycloak
-    environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=admin
-    ports:
-      - "9090:8080"
-    command: "start-dev"
-    deploy:
-      resources:
-        limits:
-          memory: 1G # Asignamos un poco más a Keycloak ya que puede consumir más memoria
+  # keycloak:
+  #   image: quay.io/keycloak/keycloak:24.0.4
+  #   container_name: keycloak
+  #   environment:
+  #     - KEYCLOAK_ADMIN=admin
+  #     - KEYCLOAK_ADMIN_PASSWORD=admin
+  #   ports:
+  #     - "9090:8080"
+  #   command: "start-dev"
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 1G # Asignamos un poco más a Keycloak ya que puede consumir más memoria
 
   config-service:
     build: ./services/config-service
@@ -44,16 +44,16 @@ services:
         limits:
           memory: 512M
 
-  identity-service:
-    build: ./services/identity-service
-    container_name: identity-service
-    depends_on:
-      config-service:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+  # identity-service:
+  #   build: ./services/identity-service
+  #   container_name: identity-service
+  #   depends_on:
+  #     config-service:
+  #       condition: service_healthy
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
 
   catalog-service:
     build: ./services/catalog-service
@@ -66,35 +66,35 @@ services:
         limits:
           memory: 512M
 
-  order-service:
-    build: ./services/order-service
-    container_name: order-service
-    depends_on:
-      config-service:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+  # order-service:
+  #   build: ./services/order-service
+  #   container_name: order-service
+  #   depends_on:
+  #     config-service:
+  #       condition: service_healthy
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
 
-  inventory-service:
-    build: ./services/inventory-service
-    container_name: inventory-service
-    depends_on:
-      config-service:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+  # inventory-service:
+  #   build: ./services/inventory-service
+  #   container_name: inventory-service
+  #   depends_on:
+  #     config-service:
+  #       condition: service_healthy
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
 
-  payment-service:
-    build: ./services/payment-service
-    container_name: payment-service
-    depends_on:
-      config-service:
-        condition: service_healthy
-    deploy:
-      resources:
-        limits:
-          memory: 512M
+  # payment-service:
+  #   build: ./services/payment-service
+  #   container_name: payment-service
+  #   depends_on:
+  #     config-service:
+  #       condition: service_healthy
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 512M
